--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "nodemon --exec ts-node src/index.ts"
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "test": "nodemon --exec ts-node src/t1.ts"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^1.4.13",
     "@types/node": "^24.0.3",
     "@types/pg": "^8.15.4",
     "nodemon": "^3.1.10",
@@ -24,12 +26,25 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@huggingface/inference": "^2.8.1", 
+    "@huggingface/transformers": "^3.6.0",
+    "@langchain/community": "^0.3.47",
+    "@langchain/core": "^0.3.61",
+    "@langchain/qdrant": "^0.1.2",
+    "@qdrant/js-client-rest": "^1.14.1",
+    "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "firebase": "^11.9.1",
+    "firebase-admin": "^13.4.0",
     "jsonwebtoken": "^9.0.2",
+    "langchain": "^0.3.29",
+    "multer": "^2.0.1",
+    "pdf-parse": "^1.1.1",
     "pg": "^8.16.2",
     "zod": "^3.25.67"
   }
 }
+
