--- a/server/package.json
+++ b/server/package.json
@@ -19,18 +19,21 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^1.4.13",
-    "@types/node": "^24.0.3",
+    "@types/node": "^24.0.7",
     "@types/pg": "^8.15.4",
     "nodemon": "^3.1.10",
+    "prisma": "^6.10.1",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@huggingface/inference": "^2.8.1", 
+    "@huggingface/inference": "^2.8.1",
     "@huggingface/transformers": "^3.5.2",
     "@langchain/community": "0.3.45",
     "@langchain/core": "^0.3.45",
     "@langchain/qdrant": "^0.1.2",
+    "@prisma/client": "^6.10.1",
     "@qdrant/js-client-rest": "^1.14.1",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
@@ -47,4 +50,3 @@
     "zod": "^3.25.67"
   }
 }
-
