--- a/server/package.json
+++ b/server/package.json
@@ -30,7 +30,7 @@
   "dependencies": {
     "@huggingface/inference": "^2.8.1",
     "@huggingface/transformers": "^3.5.2",
-    "@langchain/community": "0.3.45",
+    "@langchain/community": "^0.3.48",
     "@langchain/core": "^0.3.45",
     "@langchain/qdrant": "^0.1.2",
     "@prisma/client": "^6.10.1",
@@ -44,6 +44,7 @@
     "firebase-admin": "^12.0.0",
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.29",
+    "latest": "^0.2.0",
     "multer": "^2.0.1",
     "pdf-parse": "^1.1.1",
     "pg": "^8.16.2",
