--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "migrate": "npx prisma migrate deploy",
     "build": "npm run generate && tsc",
     "start": "npm run migrate && node dist/index.js",
-    "dev": "nodemon --exec ts-node src/index.ts",
+    "dev": "nodemon --exec ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
